# mcserver

./: .gitignore  CMakeLists.txt
